@@ -399,7 +399,6 @@ EXPORTS
 	KSI_Signature_getHashAlgorithm
 	KSI_Signature_createDataHasher
 	KSI_Signature_getSigningTime
-	KSI_Signature_getSignerIdentity
 	KSI_Signature_getAggregationHashChainIdentity
 	KSI_Signature_getPublicationRecord
 	KSI_Signature_replacePublicationRecord
