@@ -1198,147 +1198,6 @@ cleanup:
 
 }
 
-int KSI_Signature_getSignerIdentity(KSI_Signature *sig, char **signerIdentity) {
-	int res;
-	size_t i, j;
-	KSI_Utf8StringList *idList = NULL;
-	char *signerId = NULL;
-	size_t signerId_size = 1; // At least 1 for trailing zero.
-	size_t signerId_len = 0;
-	KSI_LIST(KSI_HashChainLink) *pLinks = NULL;
-
-	if (sig == NULL || signerIdentity == NULL) {
-		res = KSI_INVALID_ARGUMENT;
-		goto cleanup;
-	}
-	KSI_ERR_clearErrors(sig->ctx);
-
-	/* Create a list of separate signer identities. */
-	res = KSI_Utf8StringList_new(&idList);
-	if (res != KSI_OK) {
-		KSI_pushError(sig->ctx, res, NULL);
-		goto cleanup;
-	}
-
-	/* Extract all identities from all aggregation hash chains from top to bottom. */
-	for (i = KSI_AggregationHashChainList_length(sig->aggregationChainList); i-- > 0;) {
-		KSI_AggregationHashChain *aggrRec = NULL;
-
-		res = KSI_AggregationHashChainList_elementAt(sig->aggregationChainList, i, &aggrRec);
-		if (res != KSI_OK || aggrRec == NULL) {
-			KSI_pushError(sig->ctx, res != KSI_OK ? res : (res = KSI_INVALID_STATE), NULL);
-			goto cleanup;
-		}
-
-		res = KSI_AggregationHashChain_getChain(aggrRec, &pLinks);
-		if (res != KSI_OK || pLinks == NULL) {
-			KSI_pushError(sig->ctx, res != KSI_OK ? res : (res = KSI_INVALID_STATE), NULL);
-			goto cleanup;
-		}
-
-		for (j = KSI_HashChainLinkList_length(pLinks); j-- > 0;) {
-			KSI_HashChainLink *link = NULL;
-			KSI_MetaDataElement *metaData = NULL;
-			KSI_OctetString *legacyId = NULL;
-
-			res = KSI_HashChainLinkList_elementAt(pLinks, j, &link);
-			if (res != KSI_OK) {
-				KSI_pushError(sig->ctx, res, NULL);
-				goto cleanup;
-			}
-
-			/* Extract legacyId */
-			res = KSI_HashChainLink_getLegacyId(link, &legacyId);
-			if (res != KSI_OK) {
-				KSI_pushError(sig->ctx, res, NULL);
-				goto cleanup;
-			}
-
-			/* Extract MetaData */
-			res = KSI_HashChainLink_getMetaData(link, &metaData);
-			if (res != KSI_OK) {
-				KSI_pushError(sig->ctx, res, NULL);
-				goto cleanup;
-			}
-
-			if (legacyId != NULL) {
-				KSI_Utf8String *clientId = NULL;
-
-				res = KSI_OctetString_LegacyId_getUtf8String(legacyId, &clientId);
-				if (res != KSI_OK) {
-					KSI_pushError(sig->ctx, res, NULL);
-					goto cleanup;
-				}
-
-				signerId_size += KSI_Utf8String_size(clientId) + 4;
-
-				res = KSI_Utf8StringList_append(idList, clientId);
-				if (res != KSI_OK) {
-					KSI_pushError(sig->ctx, res, NULL);
-					goto cleanup;
-				}
-
-			} else if (metaData != NULL) {
-				KSI_Utf8String *clientId = NULL;
-				KSI_Utf8String *ref = NULL;
-
-				res = KSI_MetaDataElement_getClientId(metaData, &clientId);
-				if (res != KSI_OK) {
-					KSI_pushError(sig->ctx, res, NULL);
-					goto cleanup;
-				}
-
-				signerId_size += KSI_Utf8String_size(clientId) + 4;
-
-				res = KSI_Utf8StringList_append(idList, ref = KSI_Utf8String_ref(clientId));
-				if (res != KSI_OK) {
-					/* Cleanup the reference. */
-					KSI_Utf8String_free(ref);
-
-					KSI_pushError(sig->ctx, res, NULL);
-					goto cleanup;
-				}
-
-			} else {
-				/* Exit inner loop if this chain link does not contain a meta value block. */
-				continue;
-			}
-		}
-	}
-
-	/* Allocate the result buffer. */
-	signerId = KSI_calloc(signerId_size, 1);
-	if (signerId == NULL) {
-		KSI_pushError(sig->ctx, res = KSI_OUT_OF_MEMORY, NULL);
-		goto cleanup;
-	}
-
-	/* Concatenate all together. */
-	for (i = 0; i < KSI_Utf8StringList_length(idList); i++) {
-		KSI_Utf8String *tmp = NULL;
-
-		res = KSI_Utf8StringList_elementAt(idList, i, &tmp);
-		if (res != KSI_OK) {
-			KSI_pushError(sig->ctx, res, NULL);
-			goto cleanup;
-		}
-
-		signerId_len += KSI_snprintf(signerId + signerId_len, signerId_size - signerId_len, "%s%s", signerId_len > 0 ? " :: " : "", KSI_Utf8String_cstr(tmp));
-	}
-
-	*signerIdentity = signerId;
-	signerId = NULL;
-
-	res = KSI_OK;
-
-cleanup:
-
-	KSI_free(signerId);
-	KSI_Utf8StringList_free(idList);
-
-	return res;
-}
-
 int KSI_Signature_getAggregationHashChainIdentity(const KSI_Signature *sig, KSI_HashChainLinkIdentityList **identity) {
 	int res = KSI_UNKNOWN_ERROR;
 	size_t i;
